# tauri-todo-app

./: README.md  package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.tsx  main.tsx  routes.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: interactors.rs  main.rs  models.rs  ports.rs  repositories.rs  result.rs  utils.rs
src-tauri/src/repositories/: fake.rs  group.rs  project.rs
src-tauri/src/repositories/fake/: project.rs
src/components/: WindowTitle.tsx
src/components/Modal/: Modal.tsx  styles.module.css
src/components/ProjectCreateModal/: ProjectCreateModal.tsx  index.tsx
src/pages/Project/: Project.module.css  Project.tsx  index.tsx
src/pages/Projects/: Projects.module.css  Projects.tsx  index.ts
