[package]
name = "tauri-todo-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["max_hha"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["window-set-title", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.26"
time = { version = "0.3.27", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }
anyhow = "1.0.75"
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["macros", "rt"] }
serde-error = "0.1.2"
validator = { version = "0.16.1", features = ["derive"] }
blocking = "1.3.1"
fs4 = { version = "0.6.6", features = ["tokio-async"] }
bson = "2.7.0"
scopeguard = "1.2.0"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
